--- a/.github/workflows/lighthouse-ci.yml
+++ b/.github/workflows/lighthouse-ci.yml
@@ -28,6 +28,38 @@ jobs:
         env:
           LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
 
+      - name: Format Lighthouse results
+        id: format_results
+        run: |
+          REPORT=$(cat .lighthouseci/manifest.json | jq -r '.[0].url' | xargs -I {} cat .lighthouseci/lhr-{}.json)
+          echo "accessibility_score=$(echo $REPORT | jq -r '.categories.accessibility.score * 100')" >> $GITHUB_ENV
+          echo "accessibility_issues=$(echo $REPORT | jq -r '.categories.accessibility.description')" >> $GITHUB_ENV
+
+      - name: Comment PR
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const score = process.env.accessibility_score;
+            const issues = process.env.accessibility_issues;
+            
+            let comment = `## 🔍 Lighthouse アクセシビリティレポート\n\n`;
+            comment += `### スコア: ${score}%\n\n`;
+            
+            if (score < 90) {
+              comment += `⚠️ アクセシビリティスコアが90%未満です。\n\n`;
+              comment += `${issues}\n\n`;
+              comment += `詳細な結果は[こちら](${process.env.LIGHTHOUSE_REPORT_URL})でご確認いただけます。`;
+            } else {
+              comment += `✅ アクセシビリティスコアは基準を満たしています！`;
+            }
+            
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: comment
+            });
+
       - name: Upload Lighthouse results
         uses: actions/upload-artifact@v4
         with:
